user_service/user-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/metrics'
    prometheus.io/port: '8080'
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
